Agregada documentación en swagger
